--- a/SignalRWebUI/Views/ProgressBars/Index.cshtml
+++ b/SignalRWebUI/Views/ProgressBars/Index.cshtml
@@ -23,17 +23,44 @@
 			console.log(err);
 		});
 
-		connection.on("ReceiveTotalMoneyCaseAmount", (value1) => {
-			$("#totalmoneycaseamount").text(value1);
+		connection.on("ReceiveTotalMoneyCaseAmount", (value) => {
+			$("#totalmoneycaseamount").text(value);
 		});
 
-		connection.on("ReceiveActiveOrderCount", (value1) => {
-			$("#activeordercount").text(value1);
+		connection.on("ReceiveActiveOrderCount", (value) => {
+			$("#activeordercount").text(value);
 		});
 
-		connection.on("ReceiveMenuTableCount", (value1) => {
-			$("#menutablecount").text(value1);
+		connection.on("ReceiveMenuTableCount", (value) => {
+			$("#menutablecount").text(value);
 		});
+
+		connection.on("ReceiveMenuTableCount", (value) => {
+			$("#ReceiveMenuTableCount").empty();
+			$("#ReceiveMenuTableCount").append(`
+				<div class="d-flex justify-content-between mb-1">
+					<span class="text-muted">Toplam Masa Sayısı</span>
+					<span class="text-muted fw-bold"> ${value}</span>
+				</div>
+				<div class="progress mb-2" style="height: 7px;">
+					<div class="progress-bar bg-success" role="progressbar" style="width: ${value}%" aria-valuenow="${value}" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="${value}%"></div>
+				</div>
+			`);
+		});
+
+		connection.on("ReceiveProductPriveAvg", (value) => {
+			$("#ReceiveProductPriveAvg").empty();
+			$("#ReceiveProductPriveAvg").append(`
+				<div class="d-flex justify-content-between mb-1">
+					<span class="text-muted">Ortalama Ürün Fiyatı</span>
+					<span class="text-muted fw-bold">${value}</span>
+				</div>
+				<div class="progress mb-2" style="height: 7px;">
+					<div class="progress-bar bg-info" role="progressbar" style="width: ${value}%" aria-valuenow="${value}" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="${value}%"></div>
+				</div>
+			`);
+		});
+
 
 	});
 </script>
@@ -60,42 +87,8 @@
 			<div class="col-md-5">
 				<div class="card">
 					<div class="card-body">
-						<div class="progress-card">
-							<div class="d-flex justify-content-between mb-1">
-								<span class="text-muted">Profit</span>
-								<span class="text-muted fw-bold"> $3K</span>
-							</div>
-							<div class="progress mb-2" style="height: 7px;">
-								<div class="progress-bar bg-success" role="progressbar" style="width: 78%" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="78%"></div>
-							</div>
-						</div>
-						<div class="progress-card">
-							<div class="d-flex justify-content-between mb-1">
-								<span class="text-muted">Orders</span>
-								<span class="text-muted fw-bold"> 576</span>
-							</div>
-							<div class="progress mb-2" style="height: 7px;">
-								<div class="progress-bar bg-info" role="progressbar" style="width: 65%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="65%"></div>
-							</div>
-						</div>
-						<div class="progress-card">
-							<div class="d-flex justify-content-between mb-1">
-								<span class="text-muted">Tasks Complete</span>
-								<span class="text-muted fw-bold"> 70%</span>
-							</div>
-							<div class="progress mb-2" style="height: 7px;">
-								<div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="70%"></div>
-							</div>
-						</div>
-						<div class="progress-card">
-							<div class="d-flex justify-content-between mb-1">
-								<span class="text-muted">Open Rate</span>
-								<span class="text-muted fw-bold"> 60%</span>
-							</div>
-							<div class="progress mb-2" style="height: 7px;">
-								<div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="60%"></div>
-							</div>
-						</div>
+						<div class="progress-card" id="ReceiveMenuTableCount"></div>
+						<div class="progress-card" id="ReceiveProductPriveAvg"></div>
 					</div>
 				</div>
 			</div>
